// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/error_page/ErrorPage should match snapshot, local_storage type 1`] = `
<div
  className="container-fluid"
>
  <div
    className="error__container"
  >
    <div
      className="error__icon"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
    </div>
    <h2>
      <ErrorTitle
        title=""
        type="local_storage"
      />
    </h2>
    <ErrorMessage
      message=""
      service=""
      type="local_storage"
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back to Mattermost"
        id="error.generic.link"
        values={Object {}}
      />
    </Link>
  </div>
</div>
`;

exports[`components/error_page/ErrorPage should match snapshot, no type but with title 1`] = `
<div
  className="container-fluid"
>
  <div
    className="error__container"
  >
    <div
      className="error__icon"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
    </div>
    <h2>
      <ErrorTitle
        title="Error Title"
        type=""
      />
    </h2>
    <ErrorMessage
      message=""
      service=""
      type=""
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back to Mattermost"
        id="error.generic.link"
        values={Object {}}
      />
    </Link>
  </div>
</div>
`;

exports[`components/error_page/ErrorPage should match snapshot, oauth_missing_code type 1`] = `
<div
  className="container-fluid"
>
  <div
    className="error__container"
  >
    <div
      className="error__icon"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
    </div>
    <h2>
      <ErrorTitle
        title=""
        type="oauth_missing_code"
      />
    </h2>
    <ErrorMessage
      message=""
      service="Gitlab"
      type="oauth_missing_code"
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back to Mattermost"
        id="error.generic.link"
        values={Object {}}
      />
    </Link>
  </div>
</div>
`;

exports[`components/error_page/ErrorPage should match snapshot, page_not_found type 1`] = `
<div
  className="container-fluid"
>
  <div
    className="error__container"
  >
    <div
      className="error__icon"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
    </div>
    <h2>
      <ErrorTitle
        title=""
        type="page_not_found"
      />
    </h2>
    <ErrorMessage
      message=""
      service=""
      type="page_not_found"
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back to Mattermost"
        id="error.generic.link"
        values={Object {}}
      />
    </Link>
  </div>
</div>
`;

exports[`components/error_page/ErrorPage should match snapshot, permalink_not_found type 1`] = `
<div
  className="container-fluid"
>
  <div
    className="error__container"
  >
    <div
      className="error__icon"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
    </div>
    <h2>
      <ErrorTitle
        title=""
        type="permalink_not_found"
      />
    </h2>
    <ErrorMessage
      message=""
      service=""
      type="permalink_not_found"
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <FormattedMessage
        defaultMessage="Back to Mattermost"
        id="error.generic.link"
        values={Object {}}
      />
    </Link>
  </div>
</div>
`;
